[package]
name = "bytesize"
description = "A utility for human-readable byte count representations"
version = "1.3.0"
authors = [
    "Hyunsik Choi <hyunsik.choi@gmail.com>",
    "MrCroxx <mrcroxx@outlook.com>",
    "Rob Ede <robjtede@icloud.com>",
]
keywords = ["byte", "byte-size", "utility", "human-readable", "format"]
categories = ["development-tools", "filesystem"]
repository = "https://github.com/bytesize-rs/bytesize"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"

[features]
default = []
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde"]

[dependencies]
arbitrary = { version = "1", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
divan = "0.1"
quickcheck = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[[bench]]
name = "display"
harness = false

[lints.rust]
rust-2018-idioms = { level = "deny" }
future-incompatible = { level = "deny" }
nonstandard-style = { level = "deny" }
missing-docs = { level = "warn" }
